fixed vertical overflow in wrapper div

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -2,7 +2,7 @@
   position: relative;
   background: linear-gradient(to bottom, #f8f9fa, #7392b448);
   height: 95vh;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .form-floating > label {
   font-size: smaller;
